[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "example"
version = "0.0.1"
description = "this is example"
authors = [
  "tiqwab <tiqwab.ch90@gmailcom>"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
hello = "example:hello"
